plugins {
    id 'java'
    id 'eclipse'
    id 'application'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

group 'com.hardcoded.ample'
version '0.1.1'

sourceSets {
    main {
        java.srcDirs 'src/main/compiler'
        java.srcDirs 'src/main/exporter'
        java.srcDirs 'src/main/vm'
    }
}

java {
    modularity.inferModulePath = true
}

dependencies {
    implementation 'junit:junit:4.12'
    testImplementation 'junit:junit:4.13.2'
    
    implementation "org.apache.logging.log4j:log4j-api:2.17.0"
    implementation "org.apache.logging.log4j:log4j-core:2.17.0"
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = 'UTF-8'
}

task processPackageResources(type: Copy) {
    duplicatesStrategy = 'include'
}

test {
    failFast false
    filter {
        includeTestsMatching 'hardcoded.test.*'
    }
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'com.github.kariaro'
            artifactId = 'AmpleProgrammingLanguage'
            version = "${version}"

            from components.java
        }
    }
}
